# fods_assignment

./: .gitignore  .~lock.Banglore_traffic_Dataset.csv#  .~lock.bangalore 2022-01-01 to 2024-06-30.csv#  .~lock.bangalore 2023-07-01 to 2024-08-09.csv#  IMPLEMENTATION_SUMMARY.md  README.md  bangalore 2022-01-01 to 2024-06-30.csv  bangalore 2022-01-01 to 2024-08-09 merged.csv  bangalore 2023-07-01 to 2024-08-09.csv  filter_encoded_dataset.py  in-depth-analysis-of-bangalore-traffic.ipynb  main.py  merge_datasets.py  pyproject.toml
.ipynb_checkpoints/: in-depth-analysis-of-bangalore-traffic-checkpoint.ipynb
datasets/processed/: bangalore_locations.csv  bangalore_traffic_encoded_filtered.csv  enriched_sample.csv  enriched_sample_encoded.csv  enriched_sample_encoded_old.csv  traffic_features_encoded_filtered.csv
scripts/: encode_enriched_dataset.py  enrich_traffic_with_weather.py  filter_bangalore_encoded_features.py  read_features.py  test_coll.py
scripts/gnn/: 01_build_graph.py  02_train_model.py
src/gnn/: README.md  __init__.py
src/gnn/data/: __init__.py  dataset.py  graph_builder.py  preprocessor.py
src/gnn/evaluation/: __init__.py  metrics.py  visualizer.py
src/gnn/interpretability/: __init__.py
src/gnn/models/: __init__.py  astgcn.py  dcrnn.py  graph_wavenet.py  stgcn.py
src/gnn/training/: __init__.py  cross_validator.py  trainer.py
src/gnn/utils/: __init__.py  graph_utils.py  metrics.py
src/notebooks/: baseline_model.ipynb  ensemble.ipynb  in-depth-analysis-of-bangalore-traffic.ipynb  random_forest.ipynb  random_forest_v2.ipynb
