[project]
name = "fods-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kaggle>=1.7.4.5",
    "matplotlib>=3.10.7",
    "notebook>=7.4.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pydantic>=2.12.3",
    "pytest>=8.4.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]
