[project]
name = "fods-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.1",
    "h5py>=3.15.1",
    "kaggle>=1.7.4.5",
    "matplotlib>=3.10.7",
    "networkx>=3.5",
    "notebook>=7.4.7",
    "numpy>=2.3.4",
    "osmnx>=2.0.6",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pydantic>=2.12.3",
    "pytest>=8.4.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "torch>=2.9.1",
    "torch-geometric>=2.7.0",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
]
